@@ -17,6 +17,8 @@ contributing to this release.
 
 - Closes menus when toggling dockables. (#3022084 - Anshal Shukla)
 
+- VFSBrowser escape handling fixed when used as a dialog (#3101808 - Alan Ezust)
+
 - Fixed an exception when clicking ok while adding new action to the context
   menu if no action has been selected (Matthieu Casanova #3072546)
 
